Fix hero image alignment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -33,21 +33,23 @@ li a {
 
 .nav {
     width: 100%;
-    line-height: 50px;
+    line-height: 70px;
     text-align: right;
 }
 
 .logo {
-    display: inline-block;
-    background-image: url("../images/vp.png.jpg");
-    background-size: 50px 50px;
-    width: 50px;
-    height: 50px;
+    /* display: inline-block; */
+    background-image: url("../images/vp.png");
+    background-size: 70px 70px;
+    width: 70px;
+    height: 70px;
     float: left;
 }
 
 .hero-image {
     background-image: url("../images/landscape1.jpg");
+    background-position: center;
+    background-repeat: no-repeat;
     width: 100%;
     height: 500px;
     background-size: cover;
@@ -65,6 +67,36 @@ li a {
     .hero-image {
         width: 100%;
         height: auto;
+    }
+
+    .logo {
+        background-size: 70px 70px;
+    width: 70px;
+    height: 70px;
+    float: left;
+    }
+
+    .hero-image h1 {
+        font-size: 1em;
+    }
+
+    .nav li {
+        text-align: center;
+        font-size: 1em;
+    }
+}
+
+@media screen and (max-width: 767px) {
+    .hero-image {
+        width: 100%;
+        height: auto;
+    }
+
+    .logo {
+        background-size: 70px 70px;
+        width: 70px;
+        height: 70px;
+        margin: 0 auto;
     }
 
     .hero-image h1 {
@@ -87,7 +119,4 @@ li a {
         font-size: 1em;
     }
 
-    .nav {
-        text-align: center;
-    }
 }
